# PFG

./: .gitignore  CONTRIBUTING_GUIDE.md  LICENSE  README.md  setup.ps1  setup.sh
desktop/: package.json  pnpm-lock.yaml  tree.json  vite.config.ts
desktop/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: main.rs  synchronizer.rs  token.rs  types.rs  windows.rs
desktop/src-tauri/src/synchronizer/: api.rs  debouncer.rs  fstree.rs
docs/: compliance.md  rgpd-auto-evaluacio.md
legal/: AVIS_LEGAL.md  PRIVACITAT.md
memoria/: example.bib  generar  main.aux  main.bbl  main.bcf  main.blg  main.fdb_latexmk  main.fls  main.lof  main.lot  main.out  main.run.xml  main.tex  main.toc  preamble.tex
memoria/Apèndix/: AppendixA.aux  AppendixB.aux  AppendixC.aux  AppendixC.tex  AppendixD.tex  AppendixE.tex  AppendixF.tex
memoria/Capítols/: Chapter1.aux  Chapter1.tex  Chapter10.aux  Chapter10.tex  Chapter11.aux  Chapter11.tex  Chapter12.aux  Chapter12.tex  Chapter13.tex  Chapter14.aux  Chapter15.aux  Chapter15.tex  Chapter16.tex  Chapter2.aux  Chapter2.tex  Chapter3.aux  Chapter4.aux  Chapter5.aux  Chapter5.tex  Chapter6.aux  Chapter6.tex  Chapter7.aux  Chapter7.tex  Chapter8.aux  Chapter8.tex  Chapter9-2.aux  (+5 more)
resum/: main.aux  main.bcf  main.blg  main.fdb_latexmk  main.fls  main.out  main.run.xml  main.tex  main.toc  preamble.tex
server/: compose.yml  schema.sql  test.yaml
tests/: test.md
ui-new/: .dockerignore  .gitignore  Dockerfile  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.app.json
(+343 files in other folders)
