[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.87"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.5", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive", "rc"] }
tauri = { version = "1.8.1", features = [ "system-tray", "dialog-open"] }
tauri-plugin-positioner = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
sha2 = "0.10.9"
notify = "8.0.0"
reqwest = {version = "0.12.20",features = ["blocking", "multipart", "json", "stream"] }
uuid = { version = "1.17.0", features = ["v4"] }
tungstenite = "0.27.0"
urlencoding = "2.1.3"
tokio-tungstenite = "0.27.0"
tokio = { version = "1.46.0", features = ["full"] }
futures-util = "0.3.31"
opener = "0.8.2"
tokio-util = { version = "0.7.15", features = [ "codec" ] }
[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]
